# Project-hunter

./: .gitignore
_logs/polly/default/: log.txt
cmake/configs/: default.cmake
cmake/projects/ARPACK/: hunter.cmake
cmake/projects/ARPACK-NG/: hunter.cmake
cmake/projects/Armadillo/: hunter.cmake
cmake/projects/Beast/: hunter.cmake
cmake/projects/Biovoltron/: hunter.cmake
cmake/projects/Boost/: hunter.cmake
cmake/projects/Boost/schemes/: url_sha1_boost_library.cmake.in
cmake/projects/BoostUI/: hunter.cmake
cmake/projects/CLAPACK/: hunter.cmake
cmake/projects/ChipImgProc/: hunter.cmake
cmake/projects/GTest/: hunter.cmake
cmake/projects/GnuPlotCpp/: hunter.cmake
cmake/projects/Nucleona/: hunter.cmake
cmake/projects/OpenBLAS/: hunter.cmake
cmake/projects/OpenBLAS/schemes/: openblas_build_note.txt
cmake/projects/OpenCV/: hunter.cmake
cmake/projects/OpenCV-Extra/: hunter.cmake
cmake/projects/Screw/: hunter.cmake
cmake/projects/armadillo/: hunter.cmake
cmake/projects/cppzmq/: hunter.cmake
cmake/projects/cvplot/: hunter.cmake
cmake/projects/fitpackpp/: hunter.cmake
cmake/projects/hdf5/: hunter.cmake
cmake/projects/libcbor/: hunter.cmake
cmake/projects/libfido2/: hunter.cmake
cmake/projects/libsimdpp/: hunter.cmake
cmake/projects/mkl-cmake/: hunter.cmake
cmake/projects/mlpack/: hunter.cmake
cmake/projects/plplot/: hunter.cmake
cmake/projects/range-v3/: hunter.cmake
cmake/projects/screw/: hunter.cmake
cmake/projects/systemd/: hunter.cmake
cmake/projects/xshmfence/: hunter.cmake
examples/ARPACK-NG/: CMakeLists.txt  foo.c
examples/Armadillo/: CMakeLists.txt
examples/Beast/: example.cpp
examples/Biovoltron/: CMakeLists.txt  foo.cpp
examples/ChipImgProc/: CMakeLists.txt  foo.cpp
examples/GnuPlotCpp/: CMakeLists.txt  foo.cpp
examples/MLPACK/: CMakeLists.txt
examples/Nucleona/: CMakeLists.txt  foo.cpp
examples/Screw/: CMakeLists.txt
examples/armadillo/: CMakeLists.txt  foo.cpp
examples/cppzmq/: CMakeLists.txt
examples/cvplot/: CMakeLists.txt  foo.cpp
examples/hdf5/: CMakeLists.txt  config.cmake
examples/libsimdpp/: CMakeLists.txt  main.cpp
examples/mlpack/: CMakeLists.txt  foo.cpp
examples/plplot/: CMakeLists.txt
